[package]
name = "pngme"
version = "0.2.0"
authors = ["DemoDevv"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
crc = "1"
reqwest = { version = "0.11", features = ["blocking"] }
